examples/test/testpolicy5037.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5037
  namespace: namespace126
spec:
  podSelector:
    matchLabels:
      key25: value0
      key40: value15
      key13: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value3
          key21: value11
          key3: value11
      podSelector:
        matchLabels:
          key47: value12
